# cs4ct

./: .dockerignore  .env  .gitignore  LICENSE  PPT_목차_및_내용.md  README.md  README_langgraph.md  agent.py  agent_langgraph.py  app.py  env.template  example.csv  example_enriched.csv  main.py  main_langgraph.py  pyproject.toml  requirements.txt  supabase_config.py  test.py  test_dept_name.py  test_threshold.py  utils.py
backend/: Dockerfile  agent.py  app.py  requirements.txt
frontend/: README_DEPLOY.md  utils.py
